--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,9 +1,5 @@
 version: '1.0'
 
-envs:
-  PROJECT_NAME: apm-demo
-  PLATFORM: CI
-
 stages:
 - name: repo
   tasks:
@@ -15,15 +11,7 @@ stages:
   tasks:
   - aggregate:
     - put: package
-      params:
-        only_build: false
-      
-- name: bp-frontend
-  type: buildpack
-  source:
-    context: repo/apm-demo-ui
-    modules:
-    - name: apm-demo-ui
+    - put: package-ui
 
 - name: deploy
   tasks:
@@ -33,6 +21,7 @@ stages:
       time_out: 300
       replacement_images:
       - package/pack-result
+      - package-ui/pack-result
 
 resources:
 - name: repo
@@ -54,6 +43,14 @@ resources:
       path: apm-demo-dubbo
     - name: apm-demo-ui
       path: apm-demo-ui
+
+- name: package-ui
+  type: buildpack
+  source:
+    context: repo/apm-demo-ui
+    modules:
+    - name: apm-demo-ui
+      path: .
 
 - name: deploy
   type: dice
