--- a/apm-demo-dubbo/src/main/resources/application.properties
+++ b/apm-demo-dubbo/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=${MYSQL_PASSWORD:123456}
 
 # redis
 spring.redis.database=${REDIS_DB:0}
-spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.host=${REDIS_HOST:}
 spring.redis.sentinel.master=${MASTER_NAME:my-master}
 spring.redis.sentinel.nodes=${REDIS_SENTINELS:}
 spring.redis.port=${REDIS_PORT:6379}
