--- a/apm-demo-api/src/main/resources/application.properties
+++ b/apm-demo-api/src/main/resources/application.properties
@@ -31,3 +31,5 @@ rpc.mode=true
 rpc.dubbo.module=apm-demo-api
 rpc.dubbo.registryAddress=${ZOOKEEPER_HOST:127.0.0.1}:${ZOOKEEPER_PORT:2181}
 rpc.dubbo.port=${DUBBO_PORT:20880}
+
+mock.metric.count=1000
