添加日志mock测试接口

--- a/apm-demo-api/src/main/resources/application.properties
+++ b/apm-demo-api/src/main/resources/application.properties
@@ -33,3 +33,6 @@ rpc.dubbo.registryAddress=${ZOOKEEPER_HOST:127.0.0.1}:${ZOOKEEPER_PORT:2181}
 rpc.dubbo.port=${DUBBO_PORT:20880}
 
 mock.metric.count=1000
+
+
+collector=http://collector.marathon.l4lb.thisdcos.directory:7076
