--- a/apm-demo-dubbo/src/main/resources/application.properties
+++ b/apm-demo-dubbo/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.redis.password=${REDIS_PASSWORD:}
 rpc.mode=true
 rpc.dubbo.registryAddress=${ZOOKEEPER_HOST:127.0.0.1}:${ZOOKEEPER_PORT:2181}
 rpc.dubbo.port=${DUBBO_PORT:20880}
+
+collector=http://collector.marathon.l4lb.thisdcos.directory:7076
