修正配置文件

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -70,8 +70,6 @@
         modules: 
           - name: "apm-demo-ui"
             path: "."
-            image:
-              name: "demo-ui"
         bp_repo: "http://git.terminus.io/buildpacks/dice-bpack-termnodejs.git"
-        bp_ver: ((bp.ver))
+        bp_ver: "feature/agent-preview"
   envs: {}
