--- a/pipeline.yml
+++ b/pipeline.yml
@@ -8,7 +8,7 @@ stages:
   - name: "buildpack"
     tasks:
       - aggregate:
-          - put: "package"
+          - put: "package-backend"
           - put: "package-ui"
   - name: "deploy"
     tasks:
