--- a/dice.yml
+++ b/dice.yml
@@ -1,52 +1,58 @@
-version: 2.0
-
-services:
-  apm-demo-api:
-    health_check:
-      exec:
-        cmd: echo 1
-    ports:
-    - 8095
-    deployments:
-      replicas: 1
-    resources:
-      cpu: 0.1
-      mem: 512
-      disk: 0
-    expose:
-      - 8095
-  apm-demo-dubbo:
-    health_check:
-      exec:
-        cmd: echo 1
-    ports:
-    - 20880
-    deployments:
-      replicas: 1
-    resources:
-      cpu: 0.1
-      mem: 512
-      disk: 0
-
-# 中间件
-addons:
-  zookeeper:
-    plan: zookeeper:professional
-
-environments:
-  production:
-    services:
-      apm-demo-api:
-        deployments:
-          replicas: 2
-        resources:
-          cpu: 0.1
-          mem: 512
-          disk: 0
-      apm-demo-dubbo:
-        deployments:
-          replicas: 1
-        resources:
-          cpu: 0.1
-          mem: 512
-          disk: 0
+---
+  version: 2
+  services: 
+    apm-demo-api: 
+      health_check: 
+        exec: 
+          cmd: "echo 1"
+      ports: 
+        - 8095
+      deployments: 
+        replicas: 1
+      resources: 
+        cpu: 0.1
+        mem: 512
+        disk: 0
+      expose: 
+        - 8095
+    apm-demo-dubbo: 
+      health_check: 
+        exec: 
+          cmd: "echo 1"
+      ports: 
+        - 20880
+      deployments: 
+        replicas: 1
+      resources: 
+        cpu: 0.1
+        mem: 512
+        disk: 0
+  addons: 
+    zookeeper: 
+      plan: "zookeeper:professional"
+    mysql: 
+      plan: "mysql:basic"
+      options: 
+        version: "5.7.23"
+    redis: 
+      plan: "redis:basic"
+      options: 
+        version: "3.2.12"
+  environments: 
+    production: 
+      services: 
+        apm-demo-api: 
+          deployments: 
+            replicas: 2
+          resources: 
+            cpu: 0.1
+            mem: 512
+            disk: 0
+        apm-demo-dubbo: 
+          deployments: 
+            replicas: 1
+          resources: 
+            cpu: 0.1
+            mem: 512
+            disk: 0
+  envs: {}
