--- a/apm-demo-ui/package.json
+++ b/apm-demo-ui/package.json
@@ -14,6 +14,11 @@
     "@terminus/log": "^1.4.2",
     "ejs-locals": "^1.0.2",
     "express": "^4.16.4",
-    "request": "^2.88.0"
+    "node-schedule": "^1.3.2",
+    "random": "^2.1.1",
+    "request": "^2.88.0",
+    "urlencode": "^1.1.0",
+    "util": "^0.12.1",
+    "uuid": "^3.3.3"
   }
 }
