--- a/dice.yml
+++ b/dice.yml
@@ -1,10 +1,28 @@
 ---
   version: 2
   services:
-    apm-demo-api: 
-      health_check: 
-        exec: 
-          cmd: "echo 1"
+    apm-demo-ui:
+      health_check:
+        http:
+          port: 3000
+          path: /api/health
+          duration: 120
+      ports:
+        - 3000
+      deployments:
+        replicas: 1
+      resources:
+        cpu: 0.1
+        mem: 512
+        disk: 0
+      expose:
+        - 3000
+    apm-demo-api:
+      health_check:
+        http:
+          port: 8095
+          path: /health/check
+          duration: 120
       ports: 
         - 8095
       deployments: 
