--- a/dice.yml
+++ b/dice.yml
@@ -5,7 +5,7 @@
       health_check:
         http:
           port: 3000
-          path: /api/health
+          path: /health/check
           duration: 120
       ports:
         - 3000
