--- a/dice.yml
+++ b/dice.yml
@@ -1,45 +1,48 @@
----
-  version: 2
-  services:
-    apm-demo-ui:
-      health_check:
-        http:
-          port: 3000
-          path: /health/check
-          duration: 120
-      ports:
-        - 3000
-      deployments:
-        replicas: 1
-      resources:
-        cpu: 0.1
-        mem: 512
-        disk: 0
-      expose:
-        - 3000
-    apm-demo-api:
-      health_check:
-        http:
-          port: 8095
-          path: /health/check
-          duration: 120
-      ports: 
-        - 8095
-      deployments: 
-        replicas: 1
-      resources: 
-        cpu: 1
-        mem: 512
-        disk: 0
-      expose: 
-        - 8095
-
-  addons:
-    mysql: 
-      plan: "mysql:basic"
-      options: 
-        version: "5.7.23"
-    redis: 
-      plan: "redis:basic"
-      options: 
-        version: "3.2.12"
+version: 2
+services:
+  apm-demo-ui:
+    health_check:
+      http:
+        port: 3000
+        path: "/health/check"
+        duration: 120
+    ports:
+      - 3000
+    deployments:
+      replicas: 1
+    resources:
+      cpu: 0.1
+      mem: 512
+      disk: 0
+    expose:
+      - 3000
+  apm-demo-api:
+    health_check:
+      http:
+        port: 8095
+        path: "/health/check"
+        duration: 120
+    ports:
+      - 8095
+    deployments:
+      replicas: 1
+    resources:
+      cpu: 1
+      mem: 512
+      disk: 0
+    expose:
+      - 8095
+addons:
+  mysql:
+    plan: "mysql:basic"
+    options:
+      version: "5.7.23"
+  redis:
+    plan: "redis:basic"
+    options:
+      version: "3.2.12"
+  nacos:
+    plan: "service-mesh:basic"
+    options:
+      version: "1.0.0"
+envs: {}
