--- a/dice.yml
+++ b/dice.yml
@@ -32,15 +32,29 @@ services:
       disk: 0
     expose:
       - 8095
+  apm-demo-dubbo:
+    health_check:
+      exec:
+        cmd: "(echo status;sleep 1) | nc localhost 20880 | grep -q \"OK\""
+    deployments:
+      replicas: 1
+    resources:
+      cpu: 0.5
+      mem: 512
+      disk: 0
+    ports:
+      - 20880
+    expose:
+      - 20880
 addons:
-#   mysql:
-#     plan: "mysql:basic"
-#     options:
-#       version: "5.7.23"
-#   redis:
-#     plan: "redis:basic"
-#     options:
-#       version: "3.2.12"
+  mysql:
+    plan: "mysql:basic"
+    options:
+      version: "5.7.23"
+  redis:
+    plan: "redis:basic"
+    options:
+      version: "3.2.12"
   log-analytics:
     plan: "log-analytics:basic"
     options:
