--- a/dice.yml
+++ b/dice.yml
@@ -55,8 +55,8 @@ addons:
     plan: "redis:basic"
     options:
       version: "3.2.12"
-  log-analytics:
-    plan: "log-analytics:basic"
-    options:
-      version: "2.0.0"
+#  log-analytics:
+#    plan: "log-analytics:basic"
+#    options:
+#      version: "2.0.0"
 envs: {}
