--- a/dice.yml
+++ b/dice.yml
@@ -55,6 +55,8 @@ addons:
     plan: "redis:basic"
     options:
       version: "3.2.12"
+  zookeeper:
+    plan: zookeeper:basic
 #  log-analytics:
 #    plan: "log-analytics:basic"
 #    options:
