--- a/dice.yml
+++ b/dice.yml
@@ -1,11 +1,6 @@
 version: 2
 services:
   apm-demo-ui:
-#    health_check:
-#      http:
-#        port: 3000
-#        path: "/health/check"
-#        duration: 120
     ports:
       - 3000
     deployments:
@@ -17,11 +12,6 @@ services:
     expose:
       - 3000
   apm-demo-api:
-#    health_check:
-#      http:
-#        port: 8095
-#        path: "/health/check"
-#        duration: 120
     ports:
       - 8095
     deployments:
@@ -33,9 +23,6 @@ services:
     expose:
       - 8095
   apm-demo-dubbo:
-#    health_check:
-#      exec:
-#        cmd: "(echo status;sleep 1) | nc localhost 20880 | grep -q \"OK\""
     deployments:
       replicas: 1
     resources:
@@ -55,12 +42,8 @@ addons:
     plan: "redis:basic"
     options:
       version: "3.2.12"
-  zookeeper:
-    plan: "zookeeper:basic"
+  z:
+    plan: "apache-zookeeper:basic"
     options:
       version: "3.4.10"
-#  log-analytics:
-#    plan: "log-analytics:basic"
-#    options:
-#      version: "2.0.0"
 envs: {}
